[workspace]
resolver = "2"

members = [
    "library",
    "shared-library-builder/library",
    "shared-library-builder/builder",
]

exclude = [ "target" ]

[patch.crates-io]
skia-safe = { git = "https://github.com/syrel/rust-skia.git", rev = "901028139c42d1198bb29da97a978cd5333d86a7" }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = 'thin'

[profile.release]
opt-level = 3
lto = 'thin'