[package]
name = "libskia-builder"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs", features = ["git-location"] }
clap = {version = "3.2", features = [ "derive", "color" ] }