[package]
name = "libskia"
version = "0.2.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[dependencies]
skia-safe = ">=0.55.0"
typename = "0.1"
float-cmp = "0.9"
ordered-float = "3.4"
libc = "0.2"
crossbeam = "0.8"
num_cpus = "1.0"
byteorder = "1.3"
num_enum = "0.5"
widestring = "1.0"
log = "0.4"
env_logger = "0.10"
fps_counter = "2.0"
lazy_static = "1.4"
anyhow = "1.0"
metal = { version = "0.24", optional = true }
cocoa = { version = "0.24", optional = true }
core-graphics-types = { version = "0.1", optional = true }
foreign-types-shared = { version = "0.1", optional = true }
value-box = { version = "2.3", features = [ "phlow", "anyhow" ] }
reference-box = "1.0"
array-box = "1.0"
string-box = "1.1"
geometry-box = "1.0"
value-box-ffi = { version = "1.1", features = [ "phlow", "array-box", "geometry-box", "string-box"] }
compositor = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-skia = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-ffi = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-skia-ffi = { git = "https://github.com/feenkcom/compositor-rs" }
phlow = { version = "1.3", features = [ "phlow-derive" ] }
phlow-extensions = { version = "1.3" }
phlow-ffi = "1.1"
#compositor = { path = "../../compositor-rs/compositor" }
#compositor-skia = { path = "../../compositor-rs/compositor-skia" }
#compositor-ffi = { path = "../../compositor-rs/compositor-ffi" }
#compositor-skia-ffi = { path = "../../compositor-rs/compositor-skia-ffi" }
#value-box = { path = "../../value-box-rs/value-box", features = [ "phlow" ] }

[dependencies.mozangle]
git = "https://github.com/syrel/mozangle"
rev = "8ad3227cbfe59b9ddbaa95379b5d45804427630d"
optional = true
features = [ "egl" ]

[dependencies.windows]
version = "0.34.0"
optional = true
features = [
    "alloc",
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
]

[target.'cfg(target_os="ios")'.dependencies]
uikit-sys = { git = "https://github.com/syrel/uikit-sys" }
objc = "0.2"

[target.'cfg(target_os="android")'.dependencies]
khronos-egl = { version = "4.1", features = [ "dynamic" ], optional = true }
libloading = {version = "0.7", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "glx"], optional = true }
wayland-sys = { version = "0.30.0", default-features = false, features = ["egl", "client", "dlopen"], optional = true }
khronos-egl = { version = "4.1", features = ["dynamic"], optional = true }
libloading = {version = "0.7", optional = true }

[features]
textlayout = ["skia-safe/textlayout"]
gl = ["skia-safe/gl"]
d3d = ["skia-safe/d3d", "windows" ]
angle = ["gl", "mozangle"]
x11 = ["skia-safe/x11", "dep:x11"]
wayland = [ "skia-safe/wayland", "dep:wayland-sys" ]
egl = ["skia-safe/egl", "khronos-egl", "libloading" ]
shaper = ["skia-safe/shaper"]
default = ["gl", "textlayout"]
skia_windows = [ "d3d", "angle" ]
skia_mac = ["skia-safe/metal", "metal", "cocoa", "foreign-types-shared", "core-graphics-types" ]
skia_linux = ["x11", "wayland", "egl" ]
skia_android = [ "egl" ]

[lib]
name = "Skia"
crate-type = [ "cdylib", "lib" ]