[package]
name = "libskia"
version = "0.6.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition.workspace = true

[dependencies]
skia-safe = "0.90"
typename = "0.1"
float-cmp = "0.10"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
fps_counter = "3.0"
lazy_static = "1.4"
# FFI helpers
value-box = { version = "4.1", features = [ "anyhow" ] }
array-box = { version = "4.1" }
string-box = { version = "4.1" }
value-box-ffi = { version = "4.1", features = [ "array-box", "geometry-box", "string-box"] }
# Compositor
compositor = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-skia = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-ffi = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-skia-ffi = { git = "https://github.com/feenkcom/compositor-rs" }
compositor-skia-platform = { git = "https://github.com/feenkcom/compositor-rs" }
#compositor = { path = "../../compositor-rs/compositor" }
#compositor-skia = { path = "../../compositor-rs/compositor-skia" }
#compositor-ffi = { path = "../../compositor-rs/compositor-ffi" }
#compositor-skia-ffi = { path = "../../compositor-rs/compositor-skia-ffi" }
#compositor-skia-platform = { path = "../../compositor-rs/compositor-skia-platform" }

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
metal = { version = "0.32", optional = true }
core-graphics-types = "0.2"
foreign-types-shared = "0.3"
objc2 = "0.6"

[target.'cfg(target_os="ios")'.dependencies]
uikit-sys = { git = "https://github.com/syrel/uikit-sys" }

[target.'cfg(target_os="android")'.dependencies]
khronos-egl = { version = "4.1", features = [ "dynamic" ], optional = true }
libloading = {version = "0.7", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "glx"], optional = true }
wayland-sys = { version = "0.30.0", default-features = false, features = ["egl", "client", "dlopen"], optional = true }
khronos-egl = { version = "4.1", features = ["dynamic"], optional = true }
libloading = {version = "0.7", optional = true }

[target.'cfg(target_os="windows")'.dependencies.mozangle]
git = "https://github.com/syrel/mozangle"
rev = "8ad3227cbfe59b9ddbaa95379b5d45804427630d"
optional = true
features = [ "egl" ]

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.62"
optional = true
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
]

[features]
default = ["svg", "textlayout" ]
gl = ["skia-safe/gl"]
metal = ["skia-safe/metal", "dep:metal"]
svg = ["skia-safe/svg"]
d3d = ["skia-safe/d3d"]
vulkan = ["skia-safe/vulkan"]
textlayout = ["skia-safe/textlayout"]
pdf = ["skia-safe/pdf"]
webp = ["skia-safe/webp"]
x11 = ["skia-safe/x11", "dep:x11"]
wayland = [ "skia-safe/wayland", "dep:wayland-sys" ]
egl = ["skia-safe/egl", "khronos-egl", "libloading" ]
skia_windows = [ "d3d", "gl", "vulkan", "pdf", "windows", "mozangle", "compositor-skia/angle" ]
skia_mac = ["metal", "pdf", "webp", "compositor-skia/metal" ]
skia_linux = ["x11", "wayland", "egl", "skia-safe/embed-freetype" ]
skia_android = [ "egl" ]

[lib]
name = "Skia"
crate-type = [ "cdylib", "lib" ]
